--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,34 @@ configurations {
 
 repositories {
     mavenCentral()
+
 }
 
 dependencies {
+
+    //implementations
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
+    implementation 'org.apache.parquet:parquet-hadoop:1.10.1'
+    implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.17'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1'
+    implementation 'org.zeroturnaround:zt-zip:1.14'
+    implementation 'org.apache.hadoop:hadoop-core:1.2.1'
+    implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.8'
+    implementation group: 'org.json', name: 'json', version: '20230618'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'com.google.googlejavaformat:google-java-format:1.16.0'
+    implementation 'org.zeroturnaround:zt-zip:1.14'
+    //compileOnly
+    compileOnly 'org.projectlombok:lombok'
+    //developmentOnly
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    //annotationProcessor
+    annotationProcessor 'org.projectlombok:lombok'
+    //testImplementation
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
