--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
 
     //implementations
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.50' // Changed Tomcat 9 version
+    implementation 'org.apache.tomcat.embed:tomcat-embed-el:9.0.50'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:9.0.50'
+
+
     implementation 'org.apache.parquet:parquet-hadoop:1.10.1'
     implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
@@ -38,16 +43,19 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20230618'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'com.google.googlejavaformat:google-java-format:1.16.0'
-    implementation 'org.zeroturnaround:zt-zip:1.14'
+    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+
     //compileOnly
     compileOnly 'org.projectlombok:lombok'
+
+
     //developmentOnly
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     //annotationProcessor
     annotationProcessor 'org.projectlombok:lombok'
     //testImplementation
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
